--- a/my-first-app/angular.json
+++ b/my-first-app/angular.json
@@ -24,9 +24,9 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/bootstrap/dist/css/bootstrap-theme.css",
               "src/styles.css"
-            ],
+              ],
             "scripts": []
           },
           "configurations": {
